[tool.poetry]
name = "raking"
version = "0.1.0"
description = ""
authors = ["leschiffres <letsiosm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
